// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extends new PathPattern('/user') Match /user/hello 1`] = `
Object {
  "isExact": true,
  "params": Object {
    "page": "hello",
  },
  "path": "/user/:page",
  "url": "/user/hello",
}
`;

exports[`extends new PathPattern('/user') Match with all params 1`] = `
Object {
  "isExact": true,
  "params": Object {
    "page": "home",
  },
  "path": "/user/:page",
  "url": "/user/home",
}
`;

exports[`extends new PathPatternWithParams('/user/:userName') Match with all params 1`] = `
Object {
  "isExact": true,
  "params": Object {
    "page": "home",
    "userName": "etienne",
  },
  "path": "/user/:userName/:page",
  "url": "/user/etienne/home",
}
`;

exports[`extends new PathPatternWithParams('/user/:userName') Match with all params 2`] = `false`;

exports[`new PathPattern('/') match '/' 1`] = `
Object {
  "isExact": true,
  "params": Object {},
  "path": "/",
  "url": "/",
}
`;

exports[`new PathPatternWithParams('/user/:user') match '/user/john' 1`] = `
Object {
  "isExact": true,
  "params": Object {
    "user": "john",
  },
  "path": "/user/:user",
  "url": "/user/john",
}
`;

exports[`new PathPatternWithParams('/user/:userName') does not compile with wrong param 1`] = `"Expected \\"userName\\" to be a string"`;

exports[`new PathPatternWithParams('/user/:userName') throw error when wrong case 1`] = `"Expected \\"userName\\" to be a string"`;
